@@ -1,5 +1,6 @@
 package main.command;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface ICommand {
@@ -10,6 +11,6 @@ public interface ICommand {
 	String getHelp();
 	
 	default List<String> getAliases() {
-		return List.of();
+		return Arrays.asList();
 	}
 }
